--- a/population_script.ipynb
+++ b/population_script.ipynb
@@ -120,6 +120,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_rows = table.find_all('tr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "header_row = table.find('thead').find_all('th')\n",
+    "header_names = [header.text.strip() for header in header_row]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
