--- a/population_script.ipynb
+++ b/population_script.ipynb
@@ -139,6 +139,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Year',\n",
+       " 'Population',\n",
+       " 'Yearly %  Change',\n",
+       " 'Yearly Change',\n",
+       " 'Migrants (net)',\n",
+       " 'Median Age',\n",
+       " 'Fertility Rate',\n",
+       " 'Density (P/Km²)',\n",
+       " 'Urban Pop %',\n",
+       " 'Urban Population',\n",
+       " \"Country's Share of World Pop\",\n",
+       " 'World Population',\n",
+       " 'NigeriaGlobal Rank']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hh = []\n",
+    "for header in header_row:\n",
+    "    he = header.text.strip()\n",
+    "    hh.append(he)\n",
+    "    \n",
+    "    \n",
+    "hh"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
